kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dwa-website
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: dwa-website
  type: ClusterIP
