kubernetes/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: dwa-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: dwa.<CLUSTER_SPECIFIC_DNS_ZONE>
      http:
        paths:
          - backend:
              serviceName: dwa-website
              servicePort: http
            path: /
